fixed ctrl r issu

--- a/src/app/assets/css/event-edit/event-edit.component.css
+++ b/src/app/assets/css/event-edit/event-edit.component.css
@@ -8,7 +8,7 @@
 	font-weight: normal;
 }
 .modal{
-	position: sticky;
+	/*position: sticky;*/
 }
 .glyphicon.glyphicon-menu-hamburger{
 	display: none;
