--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -145,7 +145,7 @@
                             </ul><br> 
                             <ul class="error" *ngIf="cnfrmEmailActivation" >
                                 <li [innerHTML]="cnfrmEmailActivation"></li>
-                                <br><button class="logreg-link" id="tmpl-reg-link" style="color: #fff;" (click)="resendEmail()">Resend</button>
+                                <br><button class="btn btn-info" style="color: #fff;" (click)="resendEmail()">Resend Email</button>
                                 <!-- <a (click)="resendEmail()">Click Here</a>     -->
                             </ul>  
                         </div>
