--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -8,7 +8,7 @@
                     <a [routerLink]="['/']" title="home" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> <span class="trail-end">
-                <a [routerLink]="['/event']" title="Events"> Events</a>
+                <a [routerLink]="['/event']" itemprop="url" title="Events"> Events</a>
             </span><span class="sep">»</span> <span class="trail-end">{{showHeader}}</span>
         </div>
     </div>
