fixed submit event issue@

--- a/src/app/view/changepassword/changepassword.component.html
+++ b/src/app/view/changepassword/changepassword.component.html
@@ -1,4 +1,4 @@
-<section id="main" class="clearfix">
+<section id="main" class="clearfix" itemscope>
     <div class="wrap row">
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
@@ -12,7 +12,7 @@
 
         <!-- start content part-->
         <div id="content" role="main" class="large-9 small-12 columns" jstcache="0">
-            <h1 class="page-title entry-title">Change Password</h1>
+            <h1 itemprop="name" class="page-title entry-title">Change Password</h1>
 
             <form #changePasswordForm="ngForm" (ngSubmit)="updatePassword(changePasswordForm.value)">
                 <div class="event-edit-form large-9 small-12 columns">
