--- a/src/app/view/event-edit/event-edit.component.html
+++ b/src/app/view/event-edit/event-edit.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header></app-header> -->
 
-<section id="main" class="clearfix" jstcache="0">
+<section id="main" class="clearfix" jstcache="0" itemscope>
     <div class="wrap row" jstcache="0">
 
         <div class="breadcrumb breadcrumbs columns">
@@ -13,18 +13,18 @@
         <!-- start content part-->
         <div id="content" role="main" class="large-9 small-12 columns" jstcache="0">
             <div class="event-add">
-                <h3>Edit Event</h3>
+                <h3 itemprop="name">Edit Event</h3>
             </div>
             <form name="event-add" id="event-add" #addEventForm="ngForm" (ngSubmit)="updateEvent(addEventForm.value)">    
                 <div class="event-edit-form large-6 small-12 columns">
-                    <div class="form_row clearfix">
-                        <label>Event Title<span class="indicates">*</span></label>
+                    <div class="form_row clearfix" itemprop="title">
+                        <label >Event Title<span class="indicates">*</span></label>
                         <input type="text" [(ngModel)]="showEventArr.event_title" id="event-title" name="event_title" value="" class="form-control textfield" > 
                        <ul class="error" *ngIf="errors['event_title']!=''" >
                                 <li *ngFor="let org_err of errors['event_title']">{{org_err}}</li>    
                             </ul>
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="startDate">
                         <label>Start Date<span class="indicates">*</span></label>                                         
                         <my-date-picker [options]="myDatePickerOptions" (dateChanged)="onDateChanged($event,'start')" [selDate]="startDateNormal"></my-date-picker>
                         <input type="hidden" name="start_date" [(ngModel)]="startDateNormal" >
@@ -32,7 +32,7 @@
                                 <li *ngFor="let org_err of errors['start_date']">{{org_err}}</li>    
                             </ul> 
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="startTime">
                         <label>Start Time<span class="indicates">*</span></label>
                         <input type="text" id="eventstart-time" class="form-control" [value]="showEventArr.start_time"> 
                         <input type="hidden" id="start-Time" name="start-Time">                      
@@ -40,7 +40,7 @@
                                 <li *ngFor="let org_err of errors['start_time']">{{org_err}}</li>    
                             </ul>                         
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="endDate">
                         <label>End Date<span class="indicates">*</span></label>                       
                         <my-date-picker [options]="myDatePickerOptions" (dateChanged)="onDateChanged($event,'end')" [selDate]="endDateNormal"></my-date-picker>
                         <input type="hidden" name="end_date" [(ngModel)]="endDateNormal"> 
@@ -48,7 +48,7 @@
                                 <li *ngFor="let org_err of errors['end_date']">{{org_err}}</li>    
                             </ul>  
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="endTime">
                         <label>End Time<span class="indicates">*</span></label>                        
                         <input type="text" id="eventend-time" class="form-control" [value]="showEventArr.end_time"> 
                         <input type="hidden" id="end-Time" name="end-Time">       
@@ -56,7 +56,7 @@
                                 <li *ngFor="let org_err of errors['end_time']">{{org_err}}</li>    
                             </ul>  
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="url">
                         <label>Website<span class="indicates">*</span></label>
                         <input type="url" [(ngModel)]="showEventArr.website" name="website" id="website" value="" class="form-control textfield" > 
                         <ul class="error" *ngIf="errors['website']!=''" >
@@ -82,7 +82,7 @@
                                 <li *ngFor="let org_err of errors['organizers']">{{org_err}}</li>    
                             </ul>                   
                     </div>
-                    <div class="form_row clearfix">
+                    <div class="form_row clearfix" itemprop="location">
                         <label>Location<span class="indicates">*</span></label>
                         <div style="width: 350px; float: left;">
                         <ng-select name="locationList" (data)="location"                                                       
