--- a/src/app/view/my-attendance/my-attendance.component.html
+++ b/src/app/view/my-attendance/my-attendance.component.html
@@ -40,7 +40,7 @@
 										<!-- Entry title start -->
 										<div class="entry-title" >
 											<div style="float: right;">
-												<label class="org_btn"><a class="btn btn-xs primary" href="javascript:void(0)" (click)="modal_id.open('sm');setDeleteID(list_event.event_id);">Delete</a></label>
+												<label class="org_btn"><a class="btn btn-xs primary" href="javascript:void(0)" data-toggle="modal" data-target="#modal_id" (click)="setDeleteID(list_event.event_id);">Delete</a></label>
 											</div>
 											<div class="event-title">       
 												<h2 class="entry-title">
@@ -64,10 +64,10 @@
 										<div class="entry-details">
 
 											<p class="address" itemprop="address" *ngIf = "getToken">{{list_event.location}}</p>
-											    <p><i class="fa fa-building-o new_icon"></i>
-                                                        {{list_event.city_name}},                      {{list_event.state_name}},  
-                                                         {{list_event.country_name}}                
-                                                         </p>
+											<p><i class="fa fa-building-o new_icon"></i>
+												{{list_event.city_name}},                      {{list_event.state_name}},  
+												{{list_event.country_name}}                
+											</p>
 											<p class="event_date">
 												<span>
 													<span itemprop="startDate" content="2014-07-08T15:30"> {{list_event.start_date}}</span>
@@ -99,7 +99,7 @@
 													</span>
 
 												</li>
-												 <li class="review"> <a id="reviews_show" href="javascript:void(0);">{{list_event.comment_count}} &nbsp;</a></li>
+												<li class="review"> <a id="reviews_show" href="javascript:void(0);">{{list_event.comment_count}} &nbsp;</a></li>
 											</ul>
 
 											<ul *ngIf = "getToken"> 
@@ -156,7 +156,7 @@
 
 					</div></div>
 				</section>
-				<modal #modal_id>
+				<!-- <modal #modal_id>
 					<modal-header [show-close]="true">
 						<h4 class="modal-title">Are you sure!</h4>
 					</modal-header>
@@ -165,4 +165,24 @@
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 						<button type="button" class="btn btn-primary" data-dismiss="modal" (click)="deleteOrg()">Ok</button>
 					</modal-footer>
-				</modal>
+				</modal> -->
+
+
+
+				<div style="background-color: transparent;"  data-backdrop="static" class="modal fade" id="modal_id" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+				<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header" id="sign_in_modal">
+								<button id="closeLoginModal" type="button" class="close" data-dismiss="modal" (click)="closeModal()"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+								<h4 class="modal-title" id="lineModalLabel">Are you sure want to delete this Event!</h4>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+								<button type="button" class="btn btn-primary" data-dismiss="modal" (click)="deleteOrg()">Ok</button>
+
+							</div>
+
+						</div>
+					</div>
+				</div>
+
