fixed delete modal issue@

--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -155,7 +155,7 @@
         </div>
         <div class="form_row ">                         
             <button class="btn btn-info" type="submit" value="Save" name="submit">Save</button>                          
-            <button class="btn btn-info" type="reset" value="Cancel" name="reset">Cancel</button>
+            <a class="btn btn-info" value="Cancel" name="reset">Cancel</a>
         </div>                    
     </div>
 </form>            
