--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -44,16 +44,17 @@
                 </div>
                 <!-- .hentry -->
                 <div class="loop-nav">
-                    <a *ngIf="previous!=null" rel="next" [routerLink]="['/blog-detail',previous]">
+                    <a *ngIf="previous!=null" (click)="goToBlogDetail(previous,pre_title)">
                         <span class="previous">
                             <span class="meta-nav">&larr;</span>
                             Previous
                         </span>
                     </a>
-                     <a itemprop="url" *ngIf="next!=null" [routerLink]="['/blog-detail',next]" >
+                     <a *ngIf="next!=null" (click)="goToBlogDetail(next,nxt_title);" >
                         <span class="next" >
                           Next
                               <span class="meta-nav">&rarr;</span>
+                              <!-- (click)="goToBlogDetail(next,blogDetail.blog_title)" -->
                         </span>
                     </a>         
                 </div>
