--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="entry-header">
                         <h2 class="entry-title">
-                            <a itemprop="url"  [routerLink]="['/blog-detail',blog.blog_id]"  title="" rel="bookmark">{{blog.blog_title}}</a>
+                            <a itemprop="url" (click)="goToBlogDetail(blog.blog_id,blog.blog_title)"   title="" rel="bookmark">{{blog.blog_title}}</a>
                         </h2>
                         <div class="byline"> 
                             <!--<span class="author vcard">Author
@@ -54,7 +54,7 @@
                           
                         </div>			
                         <p class="entry-summary" [innerHTML]="blog.blog_content"></p>
-                        <a itemprop="url" *ngIf="blog.read_more==1" [routerLink]="['/blog-detail',blog.blog_id]" >Read More</a> 				  
+                        <a itemprop="url" *ngIf="blog.read_more==1" (click)="goToBlogDetail(blog.blog_id,blog.blog_title)" >Read More</a> 				  
                         
                         <!-- .entry-summary -->
 
