--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -599,7 +599,7 @@
 
             <div id="loop_listing_taxonomy" class="grid">                   
                 <div class="post event-72" *ngFor = "let related_events of data.relate_event_data">  
-                    <div class="event_img" (click)="gotoPage(related_events.event_id)"> 
+                    <div class="event_img" (click)="gotoPage(related_events.event_id,related_events.event_title)"> 
                         <a> 
                                                 <img src="{{related_events.featured_image}}" alt="image" title="{{related_events.title}}">
                                             </a>
@@ -610,7 +610,7 @@
                         <!--start post type title -->
                         <div class="event-wrapper">
                             <div class="event-title">
-                                <h2 class="entry-title"><a itemprop="url" href="" [routerLink]="['/event-detail',related_events.event_id]" title="{{related_events.event_title}}">{{related_events.event_title}}</a></h2>
+                                <h2 class="entry-title"><a itemprop="url" (click)="gotoPage(related_events.event_id,related_events.event_title)" title="{{related_events.event_title}}">{{related_events.event_title}}</a></h2>
                                <div class="listing_rating">
                                                             <div class="directory_rating_row">
                                                                 <span class="single_rating"> 
@@ -683,7 +683,7 @@
                         <a title="{{popular_event.event_title}}" class="link_img" data-rel="">
                             <img src="{{ popular_event.featured_image }}" alt="{{popular_event.event_title}}" class="Thumbnail thumbnail popular_post-thumbnail " width="60" height="60" style="height: 50px!important"></a>
 
-                            <div class="post_data"><h3><a (click)="gotoPage(popular_event.event_id)" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a>{{popular_event.comment_count}} Comments</a></span><span class="date">2 years ago</span></p></div></li>
+                            <div class="post_data"><h3><a (click)="gotoPage(popular_event.event_id,popular_event.event_title)" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a>{{popular_event.comment_count}} Comments</a></span><span class="date">2 years ago</span></p></div></li>
 
 
                         </ul>
